# skill

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  skill.md
.github/workflows/: ci-deepseek-optimizer.yml  ci-ecommerce-ops.yml  ci.yml  publish-deepseek-optimizer.yml  publish.yml
deepseek-token-optimizer/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  skill.md
deepseek-token-optimizer/src/deepseek_token_optimizer/: __init__.py  analyzer.py  cache_utils.py  middleware.py  optimizer.py  pricing.py  strategies.py  tokenizer.py  tracker.py
deepseek-token-optimizer/src/deepseek_token_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
deepseek-token-optimizer/tests/: test_optimizer.py
ecommerce-ops-skill/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  skill.md
ecommerce-ops-skill/examples/: basic_usage.py
ecommerce-ops-skill/src/ecommerce_ops_skill/: __init__.py  amazon.py  cli.py  data_fetcher.py  douyin.py  export_utils.py  http_client.py  jd.py  models.py  pinduoduo.py  platform.py  rank_parser.py  strategy_engine.py  taobao.py  web_search.py  xiaohongshu.py
ecommerce-ops-skill/tests/: test_amazon.py  test_cli.py  test_pdd_douyin.py  test_taobao_jd.py  test_xhs_export.py
examples/: basic_usage.py
mattpocock-skill/.opencode/skills/context-optimizer/: EXAMPLES.md  REFERENCE.md  SKILL.md
mattpocock-skill/.opencode/skills/context-optimizer/scripts/: memory-mgr.js
src/deepseek_token_optimizer/: __init__.py  cache_utils.py  middleware.py  optimizer.py  pricing.py  strategies.py  tokenizer.py  tracker.py
stockfund-analyzer/: README.md  check.bat  start.bat  start.ps1
stockfund-analyzer/backend/: main.py  run.bat
stockfund-analyzer/frontend/: index.html
tests/: test_optimizer.py
股市基金分析/: README.md  start.bat  start.ps1
股市基金分析/.opencode/skills/stock-analyzer/: SKILL.md
股市基金分析/backend/: main.py  requirements.txt  run.bat
股市基金分析/frontend/: package-lock.json
运营skill项目/: demo.py
运营skill项目/computer_use/: __init__.py  agent.py  controller.py  keyboard.py  mouse.py  requirements.txt  screen.py  types.py
